# xv6-public

./: .gitignore  CMakeLists.txt  Makefile  TEST  clear.c  hello.c  m_tail.c  m_test_text.c  tail.c
